--- a/backend/package.json
+++ b/backend/package.json
@@ -12,18 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.4",
+    "mongoose": "^8.8.1",
     "cloudinary": "^2.6.1",
     "socket.io": "^4.8.1"
   }
   ,
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "3.1.7"
   }
 }
